<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dcdz.drivers.demo.LoginActivity">

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="700dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#F0FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayout"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="57dp"
            android:text="@string/app_exit"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/exit_button"
            android:layout_alignBottom="@+id/exit_button"
            android:layout_alignEnd="@+id/textInputLayout"
            android:text="@string/action_login"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/interface_version" />

    </RelativeLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:keyPreviewLayout="@layout/key_preview"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
