<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dcdz.drivers.demo.MainActivity">

    <LinearLayout
        android:id="@+id/ll_navigate"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:background="@color/solid_gray"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/company" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_configure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/config_icon"
                    android:text="@string/config_text_button"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tv_general_peripherals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/general_white"
                    android:text="@string/general_peripherals"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tv_smart_desk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/card_white"
                    android:text="@string/smart_desk"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_rotation_desk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/scanning_white"
                    android:text="@string/rotation_desk"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_image_recognition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/image_recognition"
                    android:text="图像识别"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>

        <!-- <RadioGroup
             android:id="@+id/rg_navigate"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1">

             <RadioButton
                 android:id="@+id/rb_general_peripherals"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_home"
                 android:text="@string/general_peripherals"
                 android:textAlignment="center"
                 android:textColor="@color/white" />

             <RadioButton
                 android:id="@+id/rb_smart_desk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_card"
                 android:text="@string/smart_desk"
                 android:textAlignment="center"
                 android:textColor="@color/white" />

             <RadioButton
                 android:id="@+id/rb_rotation_desk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_scanner_scanning"
                 android:text="@string/rotation_desk"
                 android:textAlignment="center"
                 android:textColor="@color/white" />
         </RadioGroup>-->
<!--        <Button
            android:id="@+id/config_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/config_text_button"
            android:textColor="@color/white" />-->

        <Button
            android:id="@+id/debugging_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_background"
            android:text="@string/debugging_button"
            android:textColor="@color/white" />

    </LinearLayout>
    <!-- <RelativeLayout
         android:id="@+id/rl_navigate"
         android:layout_width="160dp"
         android:layout_height="match_parent"
         android:background="@color/solid_gray"
         app:layout_constraintStart_toStartOf="parent">

         <ImageView
             android:layout_width="96dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:contentDescription="@string/app_name"
             app:srcCompat="@drawable/company"
             android:id="@+id/imageView" />

         &lt;!&ndash;<TextClock
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/config_button"
             android:layout_centerHorizontal="true"
             android:format12Hour="HH:mm:ss"
             android:format24Hour="HH:mm:ss"
             android:textColor="#FFFFFF"
             android:textSize="26sp" />&ndash;&gt;

         <RadioGroup
             android:id="@+id/rg_navigate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="90dp">

             <RadioButton
                 android:id="@+id/rb_general_peripherals"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:checked="true"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_home"
                 android:text="@string/general_peripherals"
                 android:textAlignment="center"
                 android:textColor="@color/white" />

             <RadioButton
                 android:id="@+id/rb_smart_desk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_card"
                 android:text="@string/smart_desk"
                 android:textAlignment="center"
                 android:textColor="@color/white" />

             <RadioButton
                 android:id="@+id/rb_rotation_desk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:button="@null"
                 android:drawablePadding="5dp"
                 android:drawableTop="@drawable/selector_scanner_scanning"
                 android:text="@string/rotation_desk"
                 android:textAlignment="center"
                 android:textColor="@color/white" />
         </RadioGroup>

         <Button
             android:id="@+id/config_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="70dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/button_background"
             android:text="@string/config_text_button"
             android:textColor="@color/white" />
         <Button
             android:id="@+id/debugging_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/button_background"
             android:text="@string/debugging_button"
             android:textColor="@color/white" />
     </RelativeLayout>-->

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="62dp"
        android:background="@color/line_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fl_container"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toEndOf="@id/ll_navigate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/interface_version"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_title"
        app:layout_constraintStart_toEndOf="@+id/text_view_title" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/exit"
        android:text="退出"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_navigate"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_service"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#30000000"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="600dp"
            android:background="#C0000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/service_state_text"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size" />

        </RelativeLayout>

    </RelativeLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keyPreviewLayout="@layout/key_preview"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
